--- a/app/views/psd-revised-flow/activity.html
+++ b/app/views/psd-revised-flow/activity.html
@@ -24,9 +24,9 @@
                         Initially the same as the current page <!-- but we will move the comment form (from the comment page) and place it insitu at the top of the activity page (with ID #comment). The comment is appended to the list, as now.-->
                     </p>
 
-                    <p class="govuk-body opss-secondary-text">
+                    <!--p class="govuk-body opss-secondary-text">
                         We should have a comments page (showing them in vertical order with edit options if you wrote them) - and a link shown in the left menu. (These comments will also appear in the activity page).
-                    </p>
+                    </p-->
 
                 </div>
             </div>
