--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -40,16 +40,28 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing.html" target="_blank">Trading Standards landing page</a>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, id, voluptatibus, obcaecati sint amet cum blanditiis quae odio exercitationem totam sequi soluta cupiditate dolore pariatur aperiam itaque. Voluptates, vero recusandae?
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing.html" target="_blank">Trading Standards landing page (Admin)</a><br>
+                    Admin users and team members have all editing rights - if the product owner is on your team you have editing rights
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing-non-admin.html" target="_blank">Trading Standards landing page (Non-Admin)</a>
+                        </li>
+                        <li>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing-different-team.html" target="_blank">Trading Standards landing page (different team)</a><br>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-opss-landing" target="_blank">OPSS landing page (Allergation)</a>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, corporis sed? Fuga aut veritatis architecto exercitationem quae voluptas quisquam blanditiis ab doloribus quas! Repellendus quidem quia qui nemo, a cumque.
-                </li>
-                <li>
-                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-opss-landing__enquiry" target="_blank">OPSS landing page (Enquiry)</a>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+
+                    <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                        <li>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-opss-landing__enquiry" target="_blank">OPSS landing page (Enquiry)</a>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
