--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -51,7 +51,7 @@
                 <a href="case.html" class="govuk-link govuk-link--no-visited-state">Case</a>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Products (2)</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -67,7 +67,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses (2)</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -83,7 +83,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Images (7)</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
 
                 <ul class="govuk-list">
                     <li>
