--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Template 1
+    Case landing page - OPSS - admin
 {% endblock %}
 
 
@@ -63,7 +63,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Products (2)</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -79,7 +79,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses (2)</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -95,51 +95,51 @@
                 </ul>
             </li>
             <li>
-                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images (7)</a>
+                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
 
                 <ul class="govuk-list">
                     <li>
                         <a href="images#cases" class="govuk-link govuk-link--no-visited-state">
-                            Case images (3)
+                            Case images <span>(3)</span>
                         </a>
                     </li>
                     <li>
                         <a href="images#products" class="govuk-link govuk-link--no-visited-state">
-                            Product images (4)
+                            Product images <span>(4)</span>
                         </a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information (8)</a>
+                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(8)</span></a>
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents (2)</a>
+                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
                     </li>
                     <li>
                         <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
-                            Corrective actions (1)
+                            Corrective actions <span>(1)</span>
                         </a>
                     </li>
                     <li>
                         <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
-                            Risk assessments (2)
+                            Risk assessments <span>(2)</span>
                         </a>
                     </li>
                     <li>
                         <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
-                            Correspondence (2)
+                            Correspondence <span>(2)</span>
                         </a>
                     </li>
                     <li>
                         <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
-                            Test results (1)
+                            Test results <span>(1)</span>
                         </a>
                     </li>
                     <li>
                         <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
-                            Other (1)
+                            Other <span>(1)</span>
                         </a>
                     </li>
                 </ul>
