--- a/app/views/cosmetics-general/incomplete-product_b_refresh_4.html
+++ b/app/views/cosmetics-general/incomplete-product_b_refresh_4.html
@@ -15,9 +15,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-
-
+  <div class="govuk-grid-column-full">
 
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
             <div class="govuk-notification-banner__header">
@@ -32,7 +30,11 @@
             </div>
         </div>
 
+    </div>
+</div>
 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
 
 
