cos search update

--- a/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
@@ -45,104 +45,7 @@
             Skip to the main content
         </a>
 
-        <ul class="govuk-list opss-left-nav">
-            <li class="opss-left-nav__active">
-                <a href="case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#safety" class="govuk-link govuk-link--no-visited-state">
-                            Safety and compliance
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            The Ipsum product one
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Lorem second product name
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Reocco imports Limited
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Lipopton retail Ltd
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="images#cases" class="govuk-link govuk-link--no-visited-state">
-                            Case images <span>(3)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="images#products" class="govuk-link govuk-link--no-visited-state">
-                            Product images <span>(4)</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(8)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
-                    </li>
-                    <li>
-                        <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
-                            Corrective actions <span>(1)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
-                            Risk assessments <span>(2)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
-                            Correspondence <span>(2)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
-                            Test results <span>(1)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
-                            Other <span>(1)</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
-            </li>
-        </ul>
+        {% include "psd-revised-flow/inc_left_nav_1.html" %}
     </nav>
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
