--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -127,7 +127,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Risk level and risk assessments</h2>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed">
+        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case risk level
