--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -118,7 +118,7 @@
                             </label>
                         </div>
 
-                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-!-display-none" id="conditional-date-block-2">
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden xgovuk-!-display-none" id="conditional-date-block-2">
                             <div class="govuk-form-group">
 
                                 <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
