--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -118,7 +118,7 @@
                             </label>
                         </div>
 
-                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden xgovuk-!-display-none" id="conditional-date-block-2">
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-block-2">
                             <div class="govuk-form-group">
 
                                 <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
@@ -430,8 +430,9 @@
 <script>
     /* hide first filter for non js - start */
     if(document.getElementById('by-date-range')){
-        document.getElementById('by-date-range').removeAttribute('checked');
-        document.getElementById('conditional-date-block-2').classList.remove('govuk-!-display-none');
+        if (!window.location.search) {// = no querystring
+            document.getElementById('by-date-range').removeAttribute('checked');
+        }
     }
     /* hide first filter for non js - end */
 
